# MTA-dash

./: .gitattributes  .gitignore  README.md  app.py  appconfig.py  appconfig.toml  notebook_id.html  notebook_id.ipynb  pyfigure.py  pyfunc.py  pylayout.py  pylayoutfunc.py  pyproject.toml  pytemplate.py  requirements.txt
assets/: quarto_styles.css  styles.css
data/: MTA_Daily_Ridership.csv  MTA_data_dictionary.csv  source.txt
text/: app_description.md  app_plot1_description.md  app_plot1_insight.md  context_overview.md  context_plot_stat.md  default_question.md  project_overview.md  system_prompt.md
