[project]
name = "mtadash"
version = "1.0.0"
description = "MTA Dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash-bootstrap-templates>=1.3.0",
    "dash>=2.18.2",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
