[project]
name = "mtadash"
version = "1.0.0"
description = "MTA Dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash-bootstrap-templates>=1.3.0",
    "dash-mantine-components>=0.15.0",
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
]
